--- a/ShopList.csproj
+++ b/ShopList.csproj
@@ -13,7 +13,7 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
     <IsWebBootstrapper>false</IsWebBootstrapper>
-    <PublishUrl>M:\Software\C# Projects\BFY-ShopList\</PublishUrl>
+    <PublishUrl>C:\Users\bfyco\OneDrive\Software\C# Projects\BFY-ShopList\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
@@ -23,7 +23,7 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>45</ApplicationRevision>
+    <ApplicationRevision>46</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -53,10 +53,10 @@
     <SignManifests>true</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>98913ADAE6F2D92599209033FAC3EC2C62E12028</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>411CD804F82EFFCC0737F31B97FB6DF22ACF5646</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>ShopList_3_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>ShopList_4_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>false</SignAssembly>
@@ -92,6 +92,7 @@
     <None Include="ShopList_1_TemporaryKey.pfx" />
     <None Include="ShopList_2_TemporaryKey.pfx" />
     <None Include="ShopList_3_TemporaryKey.pfx" />
+    <None Include="ShopList_4_TemporaryKey.pfx" />
     <None Include="ShopList_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
